--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.picimako.lucas
-pluginName = lucas
+pluginGroup = com.picimako.lucas
+pluginName = Lucas
 pluginRepositoryUrl = https://github.com/picimako/lucas
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 0.1.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 223
+pluginSinceBuild = 241
 pluginUntilBuild = 241.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
-platformVersion = 2022.3.3
+platformVersion = 2024.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
