--- a/gradle.properties
+++ b/gradle.properties
@@ -4,19 +4,22 @@ pluginGroup = com.picimako.lucas
 pluginName = Lucas
 pluginRepositoryUrl = https://github.com/picimako/lucas
 # SemVer format -> https://semver.org
-pluginVersion = 0.3.0
+pluginVersion = 0.4.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 241
-pluginUntilBuild = 242.*
+pluginSinceBuild = 242
+pluginUntilBuild = 243.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
-platformVersion = 2024.1
+platformVersion = 2024.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
 platformPlugins =
+
+# Example: platformBundledPlugins = com.intellij.java
+platformBundledPlugins =
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.8
