Add notification popup for JDK 21 configuration

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,6 +8,8 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <postStartupActivity implementation="com.picimako.lucas.ProjectStartupActivity"/>
+        <notificationGroup id="Lucas JDK 21 Configuration" displayType="BALLOON"/>
     </extensions>
 
     <actions>
